GAME001 ADD JS FILE

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <html>
     <head>
-        <title><marzo08/title>
+        <title>kjnijkhiuhgjkogoj</title>
 
     </head>
     <body>
-        
+<script> src="js/script.js"</script>
     </body>
 </html>
